@@ -44,6 +44,7 @@ class TrytonConfigParser(ConfigParser.RawConfigParser):
         self.add_section('web')
         self.set('web', 'listen', 'localhost:8000')
         self.set('web', 'root', os.path.join(os.path.expanduser('~'), 'www'))
+        self.set('web', 'num_proxies', 0)
         self.add_section('database')
         self.set('database', 'uri',
             os.environ.get('TRYTOND_DATABASE_URI', 'sqlite://'))
