@@ -1,3 +1,4 @@
+* Manage 'X-Forwarded' headers from proxies
 * Add '_request' attribute to Transaction context
 * Delete translations on deletion only when model has translatable field
 * Remove MySQL backend
